--- a/style.css
+++ b/style.css
@@ -140,3 +140,48 @@
                     margin-top: 20px;
                 
                 }
+
+                footer {
+                    background-color: var(--azul-dnc);
+                    font-family: var(--fonte-padrao);
+                }
+
+                footer .container{
+                    display: flex;
+                    color: var(--cinza-houver);
+                }
+                
+                footer .container ul {
+                    width: 25%;
+                }
+
+                footer .container h3 {
+                    margin-bottom: 16px;
+                    font-weight: 600;
+                }
+
+                footer .container .redes-sociais img {
+                    margin-right: 10px;
+                }
+
+                footer .container ul>p {
+                    margin-bottom: 40px;
+                }
+
+                footer .container li {
+                    margin: 10px 0;
+                }
+
+                footer .container li .linha {
+                    text-decoration: none;
+                }
+
+                footer .container a {
+                    color: var(--cinza-houver);
+                }
+
+                footer .container ul {
+                    width: 100%;
+                    margin-bottom: 30px;
+                    list-style: none;
+                }
